# config/response.status.js
@@ -203,10 +203,16 @@ export const status = {
     code: "QUEST000",
     message: "완료하지 못한 퀘스트입니다.",
   }, 
+  ALREADY_REACH_GOAL : {
+    status: StatusCodes.ALREADY_REACH_GOAL,
+    isSuccess: false,
+    code: "QUEST001",
+    message: "이미 목표를 달성한 퀘스트입니다."
+  },
   ALREADY_CLAIM_REWARD : {
     status : StatusCodes.ALREADY_CLAIM_REWARD,
     isSuccess: false, 
-    code: "QUEST001",
+    code: "QUEST002",
     message: "이미 보상을 받은 퀘스트입니다.",
   }
 }
